--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "gulp-concat": "^2.6.1",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^5.1.0",
+        "iconify": "^1.4.0",
+        "jquery": "^3.6.0",
         "node-sass": "^7.0.1",
         "sass": "^1.54.0"
     },
